# GPU-Restricted-Power-Diagrams

./: .travis.yml  CMakeLists.txt  ConvexCell.cl  Grid.cpp  Grid.h  LICENSE  Options.cpp  Options.h  README.md  Status.h  StopWatch.h  Utils.cpp  Utils.h  basic.h  cvoro_config.h  cvoro_config.h.in  knearests.cl  knearests.cpp  knearests.h  openCL.cpp  openCL.h  test_voronoi.cpp  voronoi.cpp  voronoi.h
data/: 100K-blue.xyz  100K-perturbed-grid.xyz  100K-white.xyz
utils/: CMakeLists.txt  configure.sh
utils/cmake/: rvd.cmake  rvd_config.cmake
utils/createGrid/: CMakeLists.txt  geometry.cpp  geometry.h  main.cpp
utils/diffResult/: CMakeLists.txt  Utils.cpp  Utils.h  main.cpp
utils/rvd/: CMakeLists.txt  Utils.cpp  Utils.h  main.cpp
